--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Number Sprinter</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="wtf">WTF??????</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_result_list">Hall of Fame</string>
     <string name="title_activity_player">Select Player!</string>
