--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Number Sprinter</string>
 
-    <string name="hello_world">Hello world!</string>
+
     <string name="wtf">WTF??????</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_result_list">Hall of Fame</string>
@@ -18,6 +18,7 @@
     <string name="tEmptyPass">Password can\'t be empty!</string>
     <string name="tShortPass">Password should be 6 chars min!</string>
     <string name="tLoginOK">Login OK!</string>
+    <string name="tNoRecords">Sorry, no records yet!</string>
     <string name="tOK">OK!</string>
     <string name="tAchievers">Achievers:</string>
     <string name="tSelectPlayer">Select player</string>
@@ -47,4 +48,5 @@
     <string name="tError">Error!</string>
     <string name="btnSignup">SIGN UP</string>
     <string name="tHardMode">Play hard mode</string>
+    <string name="tPassMisMatch">Passwords doesn\'t match!</string>
 </resources>
