--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,13 @@
     <string name="wtf">WTF??????</string>
     <string name="action_settings">Settings</string>
     <string name="tWelcome">Welcome to the GAME!</string>
-    <string name="tRules">Rules are simple: You\'ll get numbers from 1 to 25 located randomly in 5x5 matrix. Your target is to to select them in acsending order. Upon completion your time is fixed. The one with smallest time is the winner!!! (Hard level: numbers and background will be ramdomly coloured as well). Good luck!</string>
+    <string name="tRules">Rules are simple: You\'ll get numbers from 1 to N^2 located randomly in NxN matrix. Your target is to to select them in acsending order. Upon completion your time is fixed. The one with smallest time is the winner!!! (Hard level: numbers and background will be ramdomly coloured as well). Good luck!</string>
     <string name="btnPlay">Play</string>
     <string name="btnResults">Results</string>
     <string name="tEnterNewPlayer">Enter NEW Player:</string>
     <string name="tNewName">Your NAME here</string>
     <string name="tEmptyName">Name can\'t be empty!</string>
-    <string name="tPlsRetypePass">Please retype password!</string>
+    <string name="tPlsRetypePass">Please retype roundTime!</string>
     <string name="tEmptyPass">Password can\'t be empty!</string>
     <string name="tShortPass">Password should be 6 chars min!</string>
     <string name="tLoginOK">Login OK!</string>
@@ -35,15 +35,15 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="tLogin">Login</string>
     <string name="tEnterYourName">Enter your NAME</string>
-    <string name="tPlsSelectPlayer">Pls select player from list and press OK or press NEW to enter new one. You\'ll be asked for password</string>
-    <string name="tPasss">Your password here</string>
+    <string name="tPlsSelectPlayer">Pls select player from list and press OK or press NEW to enter new one. You\'ll be asked for roundTime</string>
+    <string name="tPasss">Your roundTime here</string>
     <string name="tEnterPassword">Enter PASSWORD</string>
     <string name="tRetypePassword">Retype PASSWORD</string>
     <string name="tError">Error!</string>
     <string name="btnSignup">Sign up</string>
     <string name="tHardMode">Play hard mode</string>
     <string name="tPassMisMatch">Passwords doesn\'t match!</string>
-    <string name="tPassWrong">Wrong password. Please try again.</string>
+    <string name="tPassWrong">Wrong roundTime. Please try again.</string>
     <string name="tCurrentPlayer">Player:</string>
     <string name="tInstrGO">Press NEW GAME for a new round or press back for main screen.</string>
     <string name="tRoundOver">round is over!</string>
@@ -68,6 +68,14 @@
     <string name="tCLR_FLDS">Random FIELD colors</string>
     <string name="btnGoMainScreen">Main</string>
     <string name="btnRules">Rules</string>
+    <string name="Matrix_2">Change my pants (2x2)</string>
+    <string name="Matrix_3">Just baby (3x3)</string>
+    <string name="Matrix_4">Still growing (4x4)</string>
+    <string name="Matrix_5">True adult (5x5)</string>
+    <string name="Matrix_6">Hard boiled (6x6)</string>
+    <string name="Matrix_7">Genius or Idiot :) (7x7)</string>
+    <string name="tComplexity">Complexity</string>
+    <string name="tComplexityTitle">Game field decides all</string>
 
 
 </resources>
