added day/night mode

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -45,7 +45,7 @@
     <string name="tPlsSelectPlayer">Пожалуйста, выберите игрока из списка и нажмите ОК или нажмите НОВЫЙ для ввода нового. Потребуется подтверждение паролем.</string>
     <string name="tPrsNewToEnterNew">(нажмите Новый Игрок для ввода нового)</string>
     <string name="tRetypePassword">Повтор пароля</string>
-    <string name="tRoundOver">Раунд закончен!</string>
+    <string name="tRoundOver">раунд закончен!</string>
     <string name="tRules">Правила просты: В матрице NxN случайным образом расположены числа от 1 до N^2. Ваша цель - выбрать их в порядке возрастания. По окончании время фиксируется. Игрок с минимальным временем побеждает!!! (Повышенная сложность: цифры и фон раскрашены случайным образом). Удачи!</string>
     <string name="tScore">Счет раунда:</string>
     <string name="tScoreRecord">Ваш новый рекорд!!!! Счет раунда:</string>
