--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
 
     <string name="wtf">WTF??????</string>
     <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
+    <string name="action_about_info">NUMBER SPRINTER GAME\nd2e DEVELOPMENT &#169;2015\nvisit us: d2edev.github.io</string>
     <string name="tWelcome">Welcome to the GAME!</string>
-    <string name="tRules">Rules are simple: You\'ll get numbers from 1 to N^2 located randomly in NxN matrix. Your target is to to select them in acsending order. Upon completion your time is fixed. The one with smallest time is the winner!!! (Hard level: numbers and background will be ramdomly coloured as well). Good luck!</string>
+    <string name="tRules">Rules are simple: You\'ll get numbers located randomly. Your target is to select them in acsending order. Upon completion your time is fixed. The one with smallest time is the winner!!! (Hard level: numbers and background will be ramdomly coloured as well). Good luck!</string>
     <string name="btnPlay">Play</string>
     <string name="btnResults">Results</string>
     <string name="tEnterNewPlayer">Enter NEW Player:</string>
@@ -26,7 +28,7 @@
     <string name="tAverageScore">Average score: </string>
     <string name="btnNewPlr">New</string>
     <string name="tDefaultPlayer">Default Player</string>
-    <string name="btnNewGame">New game</string>
+    <string name="btnNewGame"> New game </string>
     <string name="btnStop">Stop</string>
 
     <!-- TODO: Remove or change this placeholder text -->
@@ -35,7 +37,7 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="tLogin">Login</string>
     <string name="tEnterYourName">Enter your NAME</string>
-    <string name="tPlsSelectPlayer">Pls select player from list and press OK or press NEW to enter new one. You\'ll be asked for roundTime</string>
+    <string name="tPlsSelectPlayer">Pls select player from list and press OK or press NEW to enter new one.</string>
     <string name="tPasss">Your roundTime here</string>
     <string name="tEnterPassword">Enter PASSWORD</string>
     <string name="tRetypePassword">Retype PASSWORD</string>
