--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="wtf">WTF??????</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
-    <string name="action_about_info">NUMBER SPRINTER GAME\nd2e DEVELOPMENT &#169;2015\nvisit us: d2edev.github.io</string>
+    <string name="action_about_info">NUMBER SPRINTER GAME\nd2e DEVELOPMENT &#169;2015\nvisit us: d2edev.github.io\napp version:</string>
     <string name="tWelcome">Welcome to the GAME!</string>
     <string name="tRules">Rules are simple: You\'ll get numbers located randomly. Your target is to select them in acsending order. Upon completion your time is fixed. The one with smallest time is the winner!!! (Hard level: numbers and background will be ramdomly coloured as well). Good luck!</string>
     <string name="btnPlay">Play</string>
